src/objects/DRE__DRE_Rule__c.object
<CustomObject>
    <customHelpPage>DRE__DREHelp</customHelpPage>
    <fields>
        <fullName>DRE__Batch_Job_Id__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Batch Job Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Batch_Randomize_Percentage__c</fullName>
        <label>Batch Randomize Percentage</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DRE__Batch_Randomize_Rounding_Method__c</fullName>
        <label>Batch Randomize Rounding Method</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CEILING</fullName>
                    <default>true</default>
                    <label>CEILING</label>
                </value>
                <value>
                    <fullName>FLOOR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Batch_Size__c</fullName>
        <defaultValue>50</defaultValue>
        <label>Batch Size</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Batch_Threshold_Maximum__c</fullName>
        <defaultValue>50000000</defaultValue>
        <description>Maximum number of records this Batch Rule can process</description>
        <inlineHelpText>Maximum number of records this Batch Rule can process</inlineHelpText>
        <label>Batch Threshold Maximum</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Batch_Threshold_Minimum__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The minimum number of records that must be returned by Batch Criteria before Rule could be processed</description>
        <inlineHelpText>The minimum number of records that must be returned by Batch Criteria before Rule could be processed</inlineHelpText>
        <label>Batch Threshold Minimum</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRE__Effective_End_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRE__Effective_Start_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <encryptionScheme>None</encryptionScheme>
        <label>Effective Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DRE__Event__c</fullName>
        <label>Event</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>DRE__Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Edited</fullName>
                </value>
                <value>
                    <fullName>Created or Edited</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>However Impacted</fullName>
                </value>
                <value>
                    <fullName>Viewed</fullName>
                </value>
                <value>
                    <fullName>Batched</fullName>
                </value>
                <value>
                    <fullName>Unit Test Event A</fullName>
                </value>
                <value>
                    <fullName>Unit Test Event B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Field_Index__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Field Index</label>
        <length>20000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DRE__Filter_Logic__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Filter Logic</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__IsActive__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__IsRecalculated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recalculated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Object_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Order__c</fullName>
        <defaultValue>999</defaultValue>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DRE__Run_Once__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Select to prevent duplicate runs of the same rule</inlineHelpText>
        <label>Run Once</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Run_in_Bulk_Mode__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If selected this rule will be queued for async processing. Use this for heavy rules that don&apos;t need to be applied immediately. This is a great option for reducing CPU usage and preventing potential timeouts</description>
        <inlineHelpText>If selected this rule will be queued for async processing. Use this for heavy rules that don&apos;t need to be applied immediately. This is a great option for reducing CPU usage and preventing potential timeouts</inlineHelpText>
        <label>Run in Bulk Mode</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DRE__Title__c</fullName>
        <formula>HYPERLINK(&apos;/&apos; &amp; Id, Name) &amp; &quot; - &quot; &amp; DRE__Object_Name__c &amp; &quot; &quot; &amp; TEXT(DRE__Event__c) &amp; &quot; (Type: &quot; &amp; TEXT(DRE__Type__c) &amp; &quot;, Order: &quot; &amp; TEXT(DRE__Order__c) &amp; IF(DRE__Run_Once__c, &apos;, Run Once&apos;, &apos;&apos;) &amp; IF(DRE__IsActive__c, &apos;, Active&apos;, &apos;, Inactive&apos;) &amp; &quot;)&quot;</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DRE__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Automation</fullName>
                    <default>true</default>
                    <label>Automation</label>
                </value>
                <value>
                    <fullName>Validation</fullName>
                </value>
                <value>
                    <fullName>Roll-Up Summary</fullName>
                </value>
                <value>
                    <fullName>Display</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>DRE__Uid__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Unique Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DRE Rule</label>
    <listViews>
        <fullName>Batched</fullName>
        <columns>NAME</columns>
        <columns>DRE__IsActive__c</columns>
        <columns>DRE__Effective_Start_Date__c</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>DRE__Type__c</columns>
        <columns>DRE__Event__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRE__Event__c</field>
            <operation>equals</operation>
            <value>Batched</value>
        </filters>
        <label>Batched</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DRE__All</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>DRE__IsActive__c</columns>
        <columns>DRE__Event__c</columns>
        <columns>DRE__Type__c</columns>
        <columns>DRE__Run_in_Bulk_Mode__c</columns>
        <columns>DRE__Filter_Logic__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DRE__Automation_Rules</fullName>
        <columns>NAME</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>DRE__Event__c</columns>
        <columns>DRE__Order__c</columns>
        <columns>DRE__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRE__Type__c</field>
            <operation>equals</operation>
            <value>Automation</value>
        </filters>
        <label>Automation Rules</label>
    </listViews>
    <listViews>
        <fullName>DRE__Batch_Rules</fullName>
        <columns>NAME</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>DRE__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRE__Type__c</field>
            <operation>equals</operation>
            <value>Batch</value>
        </filters>
        <label>Batch Rules</label>
    </listViews>
    <listViews>
        <fullName>DRE__Display_Rules</fullName>
        <columns>NAME</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>DRE__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRE__Type__c</field>
            <operation>equals</operation>
            <value>Display</value>
        </filters>
        <label>Display Rules</label>
    </listViews>
    <listViews>
        <fullName>DRE__Rollup_Summary_Rules</fullName>
        <columns>NAME</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>DRE__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRE__Type__c</field>
            <operation>equals</operation>
            <value>Roll-Up Summary</value>
        </filters>
        <label>Roll-Up Summary Rules</label>
    </listViews>
    <listViews>
        <fullName>DRE__Validation_Rules</fullName>
        <columns>NAME</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>DRE__Event__c</columns>
        <columns>DRE__IsActive__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRE__Type__c</field>
            <operation>equals</operation>
            <value>Validation</value>
        </filters>
        <label>Validation Rules</label>
    </listViews>
    <listViews>
        <fullName>Fee_Payment_Created</fullName>
        <columns>NAME</columns>
        <columns>DRE__IsActive__c</columns>
        <columns>DRE__Event__c</columns>
        <columns>DRE__Object_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>DRE__Object_Name__c</field>
            <operation>contains</operation>
            <value>Fee_Payment</value>
        </filters>
        <filters>
            <field>DRE__Event__c</field>
            <operation>contains</operation>
            <value>Created</value>
        </filters>
        <label>Fee Payment - Created</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DRE Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>